Avoid the deprecated URL(String) constructor in the proxy tests
java.net.URL's string constructor has been deprecated since Java 20, and this
branch now compiles at release 25, so the two call sites added by the previous
commit produce deprecation warnings. Replace them with
URI.create(...).toURL(), which is the documented replacement and performs the
same RFC 2396 parsing.

Only the lines introduced by the previous commit are changed. The surrounding
tests still use new URL(...) in places this branch never touched, so URL
remains imported; converting those is left to a separate cleanup rather than
mixing unrelated churn into the CONNECT-timeout fix.

Co-authored-by: Cursor <cursoragent@cursor.com>